--- a/css/bevasarlas_cikk.css
+++ b/css/bevasarlas_cikk.css
@@ -1,5 +1,10 @@
+body{
+    background: aliceblue;
+}
+
 article{
     font-family: Verdana, serif;
+    background-color: lightblue;
 }
 
 #link{
@@ -7,3 +12,4 @@ article{
     font-family: Verdana, serif;
     font-size: small;
 }
+
