--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Cambria, serif;
 }
 
 :root {
@@ -33,8 +34,10 @@ header {
     box-shadow: 0 0 16px 0 rgba(0,0,0,0.59);
     position: sticky;
     top: 0;
+    width: 100%;
     z-index: 9999;
 }
+
 
 header .header-container {
     display: flex;
@@ -101,5 +104,38 @@ header .header-container #main-navigation .nav-item a:hover {
     color: var(--color-dark-brown);
 }
 
+footer {
+    position: fixed;
+    bottom: -35px;
+    left: -35px;
+    background: var(--color-light-brown);
+    height: 70px;
+    width: 70px;
+    transition: .5s;
+    border-radius: 50px;
+    cursor: pointer;
+}
 
+footer:hover {
+    background: var(--color-light-green);
+}
 
+footer .footer-container {
+    width: 400px;
+    margin-top: 10px;
+    transform: translateX(-400px);
+    transition: .5s;
+    cursor: pointer;
+}
+
+footer:hover .footer-container,
+footer .footer-container:hover {
+    width: 400px;
+    margin-top: 10px;
+    transform: translateX(50px);
+
+}
+
+footer .name-span {
+    font-weight: 900;
+}
