--- a/css/fooldal.css
+++ b/css/fooldal.css
@@ -88,6 +88,16 @@
     padding-bottom: 10px;
 }
 
+#table-section {
+    padding: 30px 0 60px 0;
+}
+
+#table-section h2 {
+    margin-bottom: 30px;
+    font-size: 40px;
+}
+
+
 @media (max-width: 767px) {
     #home-article-section .article-wrap .article-info-wrap {
         width: 100%;
