--- a/css/fooldal.css
+++ b/css/fooldal.css
@@ -97,6 +97,11 @@
     font-size: 40px;
 }
 
+#table-section iframe {
+    width: 100%;
+    height: 500px;
+    border: 3px solid #000000;
+}
 
 @media (max-width: 767px) {
     #home-article-section .article-wrap .article-info-wrap {
