--- a/css/bejelentkezes.css
+++ b/css/bejelentkezes.css
@@ -25,11 +25,11 @@ label {
     margin-bottom: 5px;
 }
 
-input[type=number],
-input[type=tel],
-input[type=text],
-input[type=email],
-input[type=password] {
+main input[type=number],
+main input[type=tel],
+main input[type=text],
+main input[type=email],
+main input[type=password] {
     margin-bottom: 15px;
     display: block;
     max-width: 300px;
@@ -39,17 +39,17 @@ input[type=password] {
     background: #EEEEEE;
 }
 
-input[type=number]:focus,
-input[type=tel]:focus,
-input[type=text]:focus,
-input[type=email]:focus,
-input[type=password]:focus {
+main input[type=number]:focus,
+main input[type=tel]:focus,
+main input[type=text]:focus,
+main input[type=email]:focus,
+main input[type=password]:focus {
     background: #FFFFFF;
     border-color: var(--color-light-green);
     outline: none;
 }
 
-input[type=submit] {
+main input[type=submit] {
     margin: auto;
     display: flex;
     font-size: 20px;
@@ -63,7 +63,6 @@ input[type=submit] {
 span.required {
     color: #FF0000;
 }
-
-img {
+main img {
     max-width: 100px;
 }
